src/test/deca/syntax/invalid/sansObjet/BadMultiPrintlnx.deca
{
    printlnx("Hello", "2020"; "01");
}